--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Assignment</string>
+    
+    <!-- 상세화면 -->
+    <string name="txv_field_subject">모집직무</string>
+    <string name="txv_end_time_subject">채용기간</string>
+    <string name="parenthesis_right">)</string>
+
+    <string name="txv_favorite"> 즐겨찾기 </string>
 </resources>
